Gamestate print improved